# litepdf

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  VERSION
.github/workflows/: benchmark.yml  ci-docs-noop.yml  ci.yml  release.yml
assets/icon/: README.md  regenerate.ps1  regenerate.py  requirements.txt
benchmarks/: thresholds.json
cmake/: CompilerFlags.cmake  ImportMuPDF.cmake
docs/: SMOKE-CHECKLIST.md  SMOKE-MANUAL-RUNBOOK.md
docs/plans/: 2026-04-15-litepdf-design.md  2026-04-15-litepdf-roadmap.md  2026-04-15-phase-0-bootstrap.md  2026-04-15-phase-1-document-core.md  2026-04-15-phase-2-render-engine.md  2026-04-16-phase-3-minimal-viewer.md  2026-04-16-phase-4-outline-mru.md  2026-04-17-phase-5-multi-tab.md  2026-04-18-per-render-ctx-escrow-design.md  2026-04-18-per-render-ctx-escrow.md  2026-04-19-tab-strip-polish-design.md  2026-04-19-tab-strip-polish.md  2026-04-24-phase-6-search-design.md  2026-04-24-phase-6-search.md  2026-04-25-phase-7-thumbnails.md  2026-05-01-phase-8-codex-api-verify.md  2026-05-01-phase-8-review-log.md  2026-05-01-phase-8-tier3-completion.md
docs/superpowers/plans/: 2026-05-03-print-support-phase8.5.md  2026-05-05-phase-9-icons.md  2026-06-01-phase-10-installer.md  2026-06-03-phase-11-benchmark-gate.md  2026-06-07-phase-11.5-size-prune-coldstart.md  2026-06-08-mupdf-1.27-spike-findings.md  2026-06-08-mupdf-1.27-spike.md  2026-06-10-mupdf-1.27-stage2-upgrade-landing.md  2026-06-11-phase-12-release-hardening.md  2026-06-16-search-upgrade.md  2026-06-21-cjk-system-font-loader.md  phase-11.5-baseline-after.md  phase-11.5-baseline-before.md
docs/superpowers/specs/: 2026-05-03-print-support-design.md  2026-05-05-phase-9-icons-design.md  2026-06-01-phase-10-installer-design.md  2026-06-03-phase-11-benchmark-gate-design.md  2026-06-07-phase-11.5-size-prune-coldstart-design.md  2026-06-08-mupdf-1.27-upgrade-design.md  2026-06-16-search-upgrade-design.md  2026-06-21-cjk-system-font-loader-design.md
installer/: LICENSE-DISPLAY.rtf  litepdf.iss  make-license-rtf.py
resources/: MainMenu.rc.h  litepdf.rc  litepdf.rc.in  manifest.xml
scripts/: benchmark.ps1  check-benchmark-regression.ps1  check-version-sync.ps1  generate-bookmarks-fixture.py  generate-cjk-fixture.py  generate-large-fixture.py  generate-search-fixture.py  smoke-test.ps1  ux-probe.ps1
src/: main.cpp
src/app/: AppPaths.cpp  AppPaths.hpp  AppRunGuard.cpp  AppRunGuard.hpp  CrashHandler.cpp  CrashHandler.hpp  CrossTabSearch.cpp  CrossTabSearch.hpp  SearchDispatcher.cpp  SearchDispatcher.hpp  SingleInstance.cpp  SingleInstance.hpp
src/cli/: bench_iteration.cpp  bench_iteration.hpp  main.cpp  render_to_ppm.cpp  render_to_ppm.hpp
src/core/: Document.cpp  Document.hpp  DocumentView.cpp  DocumentView.hpp  GenerationAbort.hpp  MruList.cpp  MruList.hpp  PageCache.cpp  PageCache.hpp  RenderEngine.cpp  RenderEngine.hpp  SearchQuery.cpp  SearchQuery.hpp  SearchSession.cpp  SearchSession.hpp  SessionState.cpp  SessionState.hpp  SessionStore.cpp  SessionStore.hpp  SystemFonts.cpp  SystemFonts.hpp  TabList.cpp  TabList.hpp  ThumbCache.cpp  ThumbCache.hpp  ThumbnailModel.cpp  ThumbnailModel.hpp  ThumbnailRenderer.cpp  ThumbnailRenderer.hpp
src/printing/: PrintAbortFlag.hpp  PrintGeometry.hpp  PrintJob.cpp  PrintJob.hpp  PrintProgressDlg.cpp  PrintProgressDlg.hpp  PrintRange.cpp  PrintRange.hpp
src/ui/: ColdStartTimer.cpp  ColdStartTimer.hpp  FindBar.cpp  FindBar.hpp  MainWindow.cpp  MainWindow.hpp  OutlinePane.cpp  OutlinePane.hpp  PasswordDialog.cpp  PasswordDialog.hpp  PasswordDialog_internal.hpp  PdfCanvas.cpp  PdfCanvas.hpp  PdfCanvasLayout.hpp  ResultsPanel.cpp  ResultsPanel.hpp  Splitter.cpp  Splitter.hpp  TabManager.cpp  TabManager.hpp  ThumbnailPane.cpp  ThumbnailPane.hpp  VerticalSplitter.cpp  VerticalSplitter.hpp  password_retry.cpp  password_retry.hpp
src/ui/detail/: ColdStartMath.hpp  SplitterCore.hpp  SplitterMath.hpp
tests/: CMakeLists.txt
tests/fixtures/: sample.cbz  sample.epub
tests/unit/: ThumbnailModelTests.cpp  test_app_paths.cpp  test_cjk_extract_liveness.cpp  test_cli_bench_teardown.cpp  test_cli_render_teardown.cpp  test_cold_start_math.cpp  test_cross_tab_search.cpp  test_crosstab_ctrlw_race.cpp  test_document_accessors.cpp  test_document_clone_context.cpp  test_document_formats.cpp  test_document_open.cpp  test_document_outline.cpp  test_document_pages.cpp  test_document_password.cpp  test_document_search.cpp  test_document_text.cpp  test_document_unicode_path.cpp  test_document_view.cpp  test_dual_page_layout.cpp  test_generation_abort.cpp  test_mru_list.cpp  test_page_cache_l1.cpp  test_page_cache_l2.cpp  test_page_cache_peek.cpp  test_password_dialog.cpp  test_password_retry.cpp  test_print_abort_flag.cpp  test_print_geometry.cpp  test_print_range_parser.cpp  test_render_engine_cache.cpp  test_render_engine_cancel.cpp  test_render_engine_invert.cpp  test_render_engine_lifecycle.cpp  test_render_engine_output.cpp  test_render_engine_priority.cpp  test_render_engine_submit.cpp  test_render_stress.cpp  test_run_guard.cpp  test_search_dispatcher.cpp  (+12 more)
